--- a/signup.html
+++ b/signup.html
@@ -21,14 +21,13 @@
 
   <body class="text-center">
     <form action= "/" method = "post" class="form-signin">
-      <img class="mb-4" src="images/panda.png" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Signup to my Newsletter!</h1>
+      <img class="mb-4" src="images/circle.jpg" alt="" width="72" height="72">
+      <h1 class="h4 mb-3 font-weight-bold">Signup to my Newsletter!</h1>
       <input type="text" class="form-control top" placeholder="First Name" name = "top" required autofocus>
       <input type="text" class="form-control middle" placeholder="Last Name" name = "middle" required>
       <input type="email" class="form-control bottom" placeholder="Email" name = "bottom" required>
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign me up!</button>
-      <p class="mt-5 mb-3 text-muted">&copy; Kav</p>
     </form>
   </body>
 </html>
